# smart-water-flow-pressure-monitor

./:  STM32_CUBEMX_FIRMWARE_MIGRATION_PROPOSAL.md  .gitattributes  .gitignore  LICENSE  README.md  ZSSC3241_Pressure_Measurement_and_Calibration_Guide.md  cmake_build_structure_guideline_for_firmware.md  firmware_refactor_phase_execution_plan.md  phase11_ai_implementation_plan.md  phase12_ai_implementation_plan.md  stm32_intergration_plan.md  system_architecture_refactoring_plan.md
2.firmware/: .clangd  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  VERIFICATION_REPORT.md
2.firmware/apps/linux_sim/: CMakeLists.txt  main.c
2.firmware/cmake/: warnings.cmake
2.firmware/include/core/: app_event.h  app_event_loop.h  app_event_queue.h  app_event_router.h  data_model.h  data_repository.h  system_fsm.h
2.firmware/include/drivers/: max35103.h  zssc3241.h
2.firmware/include/infrastructure/: i2c_bus_manager.h
2.firmware/include/platform/: linux_run_controller.h  linux_scheduled_action_queue.h  linux_virtual_clock.h  monotonic_clock_port.h
2.firmware/include/services/: measurement_manager.h  processing_stubs.h
2.firmware/include/simulation/: normalized_trace.h  scenario_manifest.h  scenario_runner.h  sim_harness.h
2.firmware/scripts/: architecture_allowlist.txt  check_architecture.sh
2.firmware/src/app/: CMakeLists.txt  app_composition.c  app_composition.h  mode_guard.c  mode_guard.h  system_fsm.c  system_fsm.h
2.firmware/src/core/: CMakeLists.txt  app_event.c  app_event_loop.c  app_event_queue.c  app_event_router.c  data_repository.c  monotonic_scheduler.c  system_fsm.c
2.firmware/src/domain/: CMakeLists.txt
2.firmware/src/drivers/: CMakeLists.txt  max35103.c  max35103.h  zssc3241.c  zssc3241.h
2.firmware/src/facades/: CMakeLists.txt  connectivity_facade.c  measurement_facade.h  power_facade.c  power_facade.h  storage_facade.h
2.firmware/src/infrastructure/: CMakeLists.txt  i2c_bus_manager.c
2.firmware/src/ports/: adc_port.h  critical_section_port.h  gpio_irq_port.h  i2c_port.h  low_power_port.h  port_status.h  rtc_port.h  spi_port.h  storage_port.h  uart_port.h  watchdog_port.h
2.firmware/src/protocols/: CMakeLists.txt
2.firmware/src/services/: CMakeLists.txt  ab_slot.c  calibration_service.c  calibration_service.h  cellular_delivery.c  cellular_delivery.h  checkpoint_policy.c  checkpoint_policy.h  flow_service.c  flow_service.h  fram_driver.c  fram_driver.h  leak_config.c  leak_config.h  leak_detection.c  leak_detection.h  leak_tracker.c  leak_tracker.h  measurement_manager.c  measurement_manager.h  pressure_service.c  pressure_service.h  processing_stubs.c  processing_stubs.h  reporting_schedule.c  reporting_schedule.h  sensor_profile.h  storage_record.c  storage_record.h  storage_service.c  storage_service.h  telemetry_builder.c  telemetry_builder.h  telemetry_queue.c  telemetry_queue.h  time_service.c  time_service.h  volume_accumulator.c  volume_accumulator.h
2.firmware/src/simulation/: CMakeLists.txt  normalized_trace.c  normalized_trace.h  scenario_manifest.c  scenario_runner.c  scenario_runner.h  sim_harness.c  sim_harness.h
2.firmware/tests/: CMakeLists.txt  structural_baseline_test.c  test_app_event_router.c  test_boot_restore.c  test_data_repository.c  test_delivery_service.c  test_determinism.c  test_event_characterization.c  test_event_mediator.c  test_event_queue.c  test_flow.c  test_leak_config.c  test_leak_state.c  test_leak_tracker.c  test_linux_action_queue.c  test_linux_peers.c  test_linux_providers.c  test_linux_simulation.c  test_linux_virtual_clock.c  test_numeric.c  test_power_converter.c  test_power_e2e.c  test_power_event_registration.c  test_power_health.c  test_power_loss.c  test_pressure.c  test_protocol_storage_codec.c  test_repo_characterization.c  test_repo_transaction.c  test_reporting_e2e.c  test_reporting_schedule.c  test_scenarios_core.c  test_scenarios_max.c  test_scenarios_metadata.c  test_scenarios_zssc.c  test_scheduler.c  test_sim_contract.c  test_simulation_harness.c  test_storage_ab_slots.c  test_storage_codec.c  (+10 more)
2.firmware/tests/contract/: test_port_contract.c
3.firmware/: CMakeLists.txt  README.md
3.firmware/apps/linux_sim/: CMakeLists.txt  main.c
3.firmware/cmake/: warnings.cmake
3.firmware/include/core/: app_event.h  app_event_loop.h  app_event_queue.h  data_repository.h  mode_guard.h  scheduler.h  system_fsm.h
3.firmware/include/platform/: virtual_clock.h
3.firmware/src/core/: CMakeLists.txt  app_event.c  app_event_loop.c  app_event_queue.c  data_repository.c  mode_guard.c  monotonic_scheduler.c  system_fsm.c
3.firmware/tests/: CMakeLists.txt  test_data_repository.c  test_event_queue.c  test_linux_simulation.c  test_scheduler.c  test_system_fsm.c
3.stm32/: .clang-format  .mxproject  3.stm32.ioc  CMakeLists.txt  MIGRATION_STATUS.md  README.md  STM32L433XX_FLASH.ld  firmware.ioc
3.stm32/Core/Inc/: fram_driver.h  fram_test.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
3.stm32/Core/Src/: autocal_board.c  autocal_board.h  fram_driver.c  fram_test.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
3.stm32/Core/Tests/: CMakeLists.txt
3.stm32/Drivers/: CMakeLists.txt
3.stm32/Drivers/FM24CL04B/: CMakeLists.txt  README.md  fram_driver.c  fram_driver.h
3.stm32/Drivers/MAX35103/: CMakeLists.txt  README.md  max35103.c  max35103.h  max35103_autocal.c  max35103_autocal.h  max35103_stm32_hal.c  max35103_stm32_hal.h
3.stm32/Drivers/ZSSC3241/: CMakeLists.txt  README.md  zssc3241.c  zssc3241.h  zssc3241_stm32_hal.c  zssc3241_stm32_hal.h
3.stm32/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
3.stm32/cmake/stm32cubemx/: CMakeLists.txt
3.stm32/src/app/: CMakeLists.txt  app_composition.c  app_composition.h
3.stm32/src/infrastructure/: CMakeLists.txt
3.stm32/src/ports/: CMakeLists.txt  i2c_port.h  port_status.h  storage_port.h
3.stm32/tests/: CMakeLists.txt  README.md  fram_hil_main.c  fram_test_groups.c  test_groups.h
3.stm32/tests/host/: CMakeLists.txt  test_app_composition_boot.c
3.stm32/tests/support/: fram_driver_fixture.c  fram_driver_fixture.h  stm32_test_assert.h  (+10 more)
(+687 files in other folders)
